src/test/ui/parser/issues/issue-62913.rs
"\u\\"
//~^ ERROR incorrect unicode escape sequence
//~| ERROR invalid trailing slash in literal
//~| ERROR expected item, found `"\u\\"`
